test/TestPhases/typechecker/invalid/ActivityReturn.blc
module

activity calc() returns int32
    cobegin
        await true
        return 0
    with weak
        await false
    end
end

activity main ()()
    var x: int64
    run x = calc()
end
